<resources>
    <string name="app_name">ShotTracker</string>

    <!--  Track Shot -->
    <string name="startTracker">Start Distance Tracker</string>
    <string name="stopTracker">Stop Distance Tracker</string>
    <string name="saveShot">Save Shot</string>
    <string name="distance">Distance</string>
    <string name="trackShot">Track Shot</string>
    <string name="viewShots">View Shots</string>
    <string name="selectClub">Select Club</string>

    <string-array name="clubs">
        <item>Select Club:</item>
        <item>Driver</item>
        <item>3 Wood</item>
        <item>Hybrid</item>
        <item>4iron</item>
        <item>5iron</item>
        <item>6iron</item>
        <item>7iron</item>
        <item>8iron</item>
        <item>9iron</item>
        <item>PW</item>
    </string-array>

    <string name="fade">Fade</string>
    <string name="straight">Straight</string>
    <string name="draw">Draw</string>
    <string name="slice">Slice</string>
    <string name="hook">Hook</string>

    <string name="notes">Notes</string>
    <string name="notesHint">e.g. course, hole, wind direction, slope etc.</string>

    <!-- View Shot -->
    <string name="delete">Delete All Shots</string>
    <string name="noShotsSaved">No %1s shots saved</string>
    <string name="shotSelectedInformation">Club: %1$s\nDistance: %2$s\nBall Flight: %3$s\nNotes: %4$s</string>

    <!-- Misc -->
    <string name="deleteShot">Delete Shot</string>
    <string name="confirmDeletion">Confirm Deletion</string>
    <string name="deleteMsgAll">Are you sure you want to permanently delete <b>ALL</b> shots from the database?</string>
    <string name="deleteMsgOne">Are you sure you want to permanently delete this shot from the database?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
